add missing files and update asset links

--- a/views/index.erb
+++ b/views/index.erb
@@ -25,7 +25,7 @@
     <meta property="og:description" content="My First App" />
     <meta property="fb:app_id" content="<%= @app.id %>" />
 
-    <script type="text/javascript" src="/javascript/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="/javascripts/jquery-1.7.1.min.js"></script>
 
     <script type="text/javascript">
       function logResponse(response) {
