--- a/views/index.erb
+++ b/views/index.erb
@@ -170,7 +170,7 @@
 
     <section id="get-started">
       <p>Welcome to your Facebook app, running on <span>heroku</span>!</p>
-      <a href="https://devcenter.heroku.com/articles/facebook" target="_top" class="button">Learn How to Edit This App</a>
+      <a href="https://devcenter.heroku.com/articles/facebook?utm_source=facebook&utm_medium=app&utm_campaign=fb_integration" target="_top" class="button">Learn How to Edit This App</a>
     </section>
 
 
@@ -233,7 +233,6 @@
             </ul>
           </div>
         </section>
-
     <% end %>
 
 
@@ -241,8 +240,8 @@
       <h1>Learn More About Heroku &amp; Facebook Apps</h1>
       <ul>
         <li>
-          <a href="https://www.heroku.com/" target="_top" class="icon heroku">Heroku</a>
-          <p>Learn more about <a href="https://www.heroku.com/" target="_top">Heroku</a>, or read developer docs in the Heroku <a href="https://devcenter.heroku.com/" target="_top">Dev Center</a>.</p>
+          <a href="https://www.heroku.com/?utm_source=facebook&utm_medium=app&utm_campaign=fb_integration" target="_top" class="icon heroku">Heroku</a>
+          <p>Learn more about <a href="https://www.heroku.com/?utm_source=facebook&utm_medium=app&utm_campaign=fb_integration" target="_top">Heroku</a>, or read developer docs in the Heroku <a href="https://devcenter.heroku.com/" target="_top">Dev Center</a>.</p>
         </li>
         <li>
           <a href="https://developers.facebook.com/docs/guides/web/" target="_top" class="icon websites">Websites</a>
