--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -9,8 +9,8 @@ body {
   color: #999;
   font: 14px/1.5em "Lucida Grande", Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
-  width: 720px;
-  margin: 20px;
+  width: 742px;
+  margin: 0 auto;
 }
 
 a:link, a:visited {
@@ -23,74 +23,42 @@ a:hover, a:active {
   text-decoration: underline;
 }
 
-h1 {
-  color: #656565;
-  font-family: "Helvetica Neue", Arial, sans-serif;
-  font-size: 18px;
-  font-weight: normal;
-}
-
 /* ------------------------------------------ */
 
 /* =header
 --------------------------------------------- */
 header {
-  border-left: 1px solid #b3b3b3;
-  border-right: 1px solid #b3b3b3;
-  border-top: 1px solid #b3b3b3;
-  font-size: 11px;
-  padding: 24px 18px;
-}
-
-header h1 {
   border-bottom: 2px solid #e9e9e9;
-  margin: 0 0 9px;
-  padding: 2px 0 8px;
+  font-size: 11px;
+  line-height: 36px;
+  position: relative;
+  padding: 9px 0 9px 0;
+  margin-bottom: 24px;
 }
 
-header #picture + div {
-  margin-left: 82px;
-}
-
-header #picture {
-  background-position: center 25%;
+header #user {
+  width: 400px;
+  color: #656565;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 50px;
+  padding-left: 56px;
   background-repeat: no-repeat;
-  background-size: 64px;
-  float: left;
-  margin-right: 18px;
-  width: 64px;
-  height: 64px;
-  overflow: hidden;
+  background-position: left center;
+}
+header #postToWall {
+display: block;
+  position: absolute;
+  right: 6px;
+  top: 21px;
 }
 
-header .tagline {
-  float: left;
-}
-
-#share-app {
-  float: right;
-  width: 344px;
-}
-
-#share-app ul {
-  float: right;
-}
-
-#share-app p {
-  float: left;
-  margin-left: 8px;
-}
-
-#share-app li {
-  float: left;
-  list-style: none;
-  margin-left: 8px;
-}
 /* ------------------------------------------ */
 
 /* =buttons
 --------------------------------------------- */
-.facebook-button:link, .facebook-button:visited {
+.facebook-button, .facebook-button:link, .facebook-button:visited {
   background-color: #eee;
   background-image: -moz-linear-gradient(top, #fdfdfd, #eaebeb);
   background-image: -ms-linear-gradient(top, #fdfdfd, #eaebeb);
@@ -127,9 +95,16 @@ header .tagline {
 .facebook-button .plus {
   background-position: 6px -17px;
 }
-
-.facebook-button .apprequests {
-  background-position: 6px -37px;
+.facebook-button .vote-button, .facebook-button .voted-button {
+  background: url("../images/sprite-check.png") no-repeat;
+  background-position: 0 -5px;
+  padding: 0 7px 0 21px;
+  pointer-events: none;
+  cursor: default;
+}
+.facebook-button .voted-button {
+  background-position: 0 -29px;
+  color: #009E7E;
 }
 
 .button:link, .button:visited {
@@ -157,188 +132,16 @@ header .tagline {
 }
 /* ------------------------------------------ */
 
-/* =get started
+/* =charities
 --------------------------------------------- */
-#get-started {
-  background: url("../images/get-started-bg.jpg");
-  border: 1px solid #353d4f;
-  height: 105px;
-  text-align: center;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, .29);
-  padding: 32px 0 0;
-}
 
-#get-started p {
-  color: #fff;
-  font-family: "CorbelRegular";
-  font-size: 24px;
-  height: 23px;
-  margin-bottom: 24px;
+#charities h1 {
+	color: #6762A6;
+	font-family: "CorbelRegular", "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
+	font-size: 24px;
+	padding-top: 9px;
+	padding-bottom: 28px;
 }
-
-#get-started p span {
-  font-family: "HybreaRegular";
-  font-size: 22px;
-}
-/* ------------------------------------------ */
-
-/* =guides/samples spacing
---------------------------------------------- */
-#guides h1,
-#samples h1 {
-  margin-bottom: 15px;
-  text-align: center;
-}
-
-#guides, #samples {
-  padding: 20px 5px 20px 10px;
-}
-
-#guides ul li,
-#samples .list {
-  float: left;
-  margin-right: 3px;
-  width: 172px;
-}
-
-#guides ul li p,
-#samples ul {
-  padding: 0 4px;
-}
-/* ------------------------------------------ */
-
-/* =guides
---------------------------------------------- */
-#guides {
-  border-bottom: 1px solid #b3b3b3;
-  border-left: 1px solid #b3b3b3;
-  border-right: 1px solid #b3b3b3;
-}
-
-#guides ul li {
-  font-size: 11px;
-  list-style: none;
-}
-
-#guides ul li p {
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  line-height: 20px;
-  text-align: justify;
-}
-
-#guides ul li a.icon {
-  background: url("../images/sprites.png") no-repeat;
-  display: block;
-  font-family: "Helvetica Neue", Arial, sans-serif;
-  font-size: 14px;
-  margin-bottom: 10px;
-  padding-top: 124px;
-  text-align: center;
-}
-
-#guides ul li a.websites {
-  background-position: 35px -87px;
-}
-
-#guides ul li a.mobile-apps {
-  background-position: 35px -231px;
-}
-
-#guides ul li a.apps-on-facebook {
-  background-position: 35px -375px;
-}
-
-#guides ul li a.heroku {
-  background-position: 35px -519px;
-}
-/* ------------------------------------------ */
-
-/* =samples
---------------------------------------------- */
-#samples {
-  background-image: url("../images/samples-bg.png");
-  border-bottom: 1px solid #dadada;
-  border-left: 1px solid #b3b3b3;
-  border-right: 1px solid #b3b3b3;
-  border-top: 1px solid #fff;
-}
-
-#samples h3 {
-  background: url("../images/header-sketch.png") no-repeat;
-  color: #646464;
-  font-weight: bold;
-  font-size: 11px;
-  line-height: 29px;
-  text-align: center;
-}
-
-#samples ul {
-  background: url("../images/picture-sketch.png") 4px 8px;
-  background-repeat: repeat-y;
-  height: 161px;
-  overflow: hidden;
-  padding-top: 8px;
-}
-
-#samples li {
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  color: #7c7c7c;
-  display: block;
-  font-size: 11px;
-  font-weight: bold;
-  height: 32px;
-  margin-bottom: 11px;
-  overflow: hidden;
-  position: relative;
-}
-
-#samples li a:link,
-#samples li a:visited {
-  color: #7c7c7c;
-  display: block;
-  line-height: 32px;
-  padding-left: 36px;
-}
-
-#samples .list img {
-  height: auto;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 32px;
-}
-
-#samples .inline ul {
-  background-repeat: repeat;
-}
-
-#samples .inline li {
-  float: left;
-  margin-left: 12px;
-  overflow: hidden;
-  padding: 0;
-  width: 32px;
-  background-position: center 25%;
-  background-repeat: no-repeat;
-  -moz-background-size: cover;
-  background-size: cover;
-}
-
-#samples .inline li.first-column {
-  margin-left: 0;
-}
-
-#samples .inline li a:link,
-#samples .inline li a:visited {
-  display: block;
-  width: 32px;
-  height: 32px;
-  overflow: hidden;
-  text-indent: -9999px;
-}
-
 
 /* ------------------------------------------ */
 
@@ -356,4 +159,100 @@ header .tagline {
 
 .clearfix {
   zoom: 1;
+}
+
+/* ------------------------------------------ */
+
+/* =charities
+--------------------------------------------- */
+#charities {
+  text-align:center;
+  padding:  0;
+  padding-bottom: 24px;
+}
+
+#charities ul {
+	padding: 0;
+}
+
+#charities li {
+  float: left;
+  width: 228px;
+  margin-left: 24px;
+  background: #F2F3F3;
+  border: 1px solid #b3b3b3;
+  text-align: center;
+  padding-bottom: 24px;
+  border-radius: 4px;
+}
+#charities ul li:first-child {
+	margin-left: 0;
+}
+.charity .logo {
+  display: block;
+  margin-bottom: 9px;
+  width: 220px;
+  height: 160px;
+}
+.charity nav .votes {
+	font-size: 28px;
+	font-family: "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
+	margin-bottom: 9px;
+}
+.charity nav .votes small {
+	font-size: 20px;
+	font-family: "CorbelRegular", "Helvetica Neue", Helvetica, Arial, Geneva, sans-serif;
+}
+.charity nav .vote-button {
+	opacity: .6;
+	pointer-events: none;
+	cursor: default;
+}
+.charity nav .vote-button.enabled {
+	opacity: 1;
+	pointer-events: auto;
+	cursor: pointer;
+}
+.charity nav .share-button {
+	display: none;
+}
+.charity nav .share-button.enabled {
+	display: inline-block;
+	
+}
+
+/* ------------------------------------------ */
+
+/* =votes
+--------------------------------------------- */
+
+#votes h3 {
+	display: block;
+	float: left;
+	width: 230px;
+	text-align: center;
+	font-size: 11px;
+	font-weight: bold !important;
+	font: 11px "Lucida Grande", Arial, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	color: #fff;
+	background-color: #6762A6;
+	line-height: 36px;
+}
+#votes ul {
+	display:  inline-block;
+}
+#votes li {
+	background-color: #F2F3F3;
+	width: 36px;
+	height: 36px;
+	margin-left: 10px;
+	float: left;
+}
+#votes li:first-child {
+	margin-left: 12px;
+}
+#votes li img {
+	width: 36px;
+	height: 36px;
 }
