--- a/views/index.erb
+++ b/views/index.erb
@@ -159,7 +159,7 @@
       </header>
 
       <section id="charities" class="clearfix">
-<!--        <h3><a href="http://heroku.com"><img src="/images/logo-heroku.png" alt="heroku" border="0" /></a></h3> -->
+        <h3><a href="http://heroku.com"><img src="/images/logo-heroku.png" alt="heroku" border="0" /></a></h3>
         <h1>Vote for a charity donation!</h1>
         <ul>
           <% @charities.each do |charity| %>
